// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnlockArrange renders 1`] = `
<div>
  <div
    class="MuiFormControl-root css-qjug7-MuiFormControl-root"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1ioi1ag-MuiFormControlLabel-root"
    >
      <span
        class="MuiSwitch-root MuiSwitch-sizeSmall css-fzgmul-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-aqlqb4-MuiButtonBase-root-MuiSwitchBase-root-MuiSwitch-switchBase"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input css-12xagqm-MuiSwitchBase-root"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
        />
      </span>
      Järjestä varasijoja, vaikka varasijailmoitukset on jo lähetetty
    </label>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeSmall css-sap23p-MuiSvgIcon-root"
      data-mui-internal-clone-element="true"
      data-testid="InfoOutlinedIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
      />
    </svg>
  </div>
</div>
`;

exports[`UnlockArrange renders checked 1`] = `
<div>
  <div
    class="MuiFormControl-root css-qjug7-MuiFormControl-root"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1ioi1ag-MuiFormControlLabel-root"
    >
      <span
        class="MuiSwitch-root MuiSwitch-sizeSmall css-fzgmul-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-aqlqb4-MuiButtonBase-root-MuiSwitchBase-root-MuiSwitch-switchBase"
        >
          <input
            checked=""
            class="PrivateSwitchBase-input MuiSwitch-input css-12xagqm-MuiSwitchBase-root"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
        />
      </span>
      Järjestä varasijoja, vaikka varasijailmoitukset on jo lähetetty
    </label>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeSmall css-sap23p-MuiSvgIcon-root"
      data-mui-internal-clone-element="true"
      data-testid="InfoOutlinedIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
      />
    </svg>
  </div>
</div>
`;
